# StreamKafka

./: .dockerignore  .env.example  .gitignore  README.md  doc_confluent.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
consumer/: consumer_historico.py  consumer_latest.py
dashboard/: painel.py
producer/: producer.py
scripts/: test_latest_per_device.py
tests/data_quality/: check_duplicates_historico.py
