[project]
name = "03kafka"
version = "0.1.0"
description = ""
authors = [
    {name = "Abel Brasil",email = "abelbrasil88@gmail.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "confluent-kafka (>=2.14.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "streamlit-autorefresh (>=1.0.1,<2.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
